test/code/test_func_ref_literal.php
<?php

function hello_world(&$name) {
    print "hello $world";
}

hello_world("name!");

